--- a/economy-web-app/src/Groups/GroupsPage.css
+++ b/economy-web-app/src/Groups/GroupsPage.css
@@ -27,3 +27,9 @@
 .hideJoinGroupPassword{
     display: none;
 }
+.showPassword{
+    background-color: white;
+}
+.currentGroupName{
+    background-color: white;
+}
