--- a/economy-web-app/src/MonthPage/ChartsPage.css
+++ b/economy-web-app/src/MonthPage/ChartsPage.css
@@ -1,6 +1,7 @@
 .HomePage {
     height: calc(100vh - 94px);
     background: linear-gradient(90deg, rgba(2,0,.6,1) 0%, rgb(121, 9, 26) 35%, rgb(203, 99, 99) 100%);
+
 }
 .chart-container{
     display: flex;
@@ -20,7 +21,7 @@
     margin-right: 10px;
     width: 15px;
     height: 15px;
-    background-color: rgb(248, 177, 8);
+   /* background-color: rgb(248, 177, 8);*/
     border: 2px solid #282c34;
     border-radius: 5px;
 
@@ -30,4 +31,9 @@
     padding-bottom: 10px;
     background-color: white;
     margin-right: 10px;
+}
+
+.HomePage .Money-container{
+
+    background-color: white;
 }
