--- a/economy-web-app/src/AddItemPage/AddItemPage.css
+++ b/economy-web-app/src/AddItemPage/AddItemPage.css
@@ -48,6 +48,37 @@
     justify-content: center;
     align-items: center;
 }
+.flex-box{
+    width: 400px;
+}
+.currentGroupAddItem-wrapper{
+
+    background: rgba(0,0,0,0.7);
+    color: #fff;
+    border-radius: 10px;
+    text-align: center;
+
+}
+.activeGroup{
+    padding-top: 4px;
+    padding-bottom: 4px;
+    letter-spacing: 1px;
+    font-size: medium;
+    color: rgb(248, 177, 8);
+}
+.currentGroupAddItem-wrapper  select {
+    width: 100%;
+    padding: 10px 0;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid #ffffff;
+    border-top: 1px solid #ffffff;
+    outline: none;
+    background-color: #333333;
+    color: inherit;
+}
 .form-item::before{
 
 }
@@ -55,7 +86,7 @@
 .form-item{
     position: relative;
     width: 100%;
-    max-width: 380px;
+    max-width: 400px;
     padding: 60px 40px 40px;
     background: rgba(0,0,0,0.7);
     border-radius: 10px;
