--- a/economy-web-app/src/Header/Header.css
+++ b/economy-web-app/src/Header/Header.css
@@ -1,52 +1,33 @@
-
-.header-border{
-    z-index: 2;
-    background: rgb(248, 177, 8);
-    width: 100%;
-    font-weight: bold;
-
-}
-.header-border ul{
-    list-style: none;
+*{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+ul {
+    list-style-type: none;
+}
+
+nav{
+    height: 10vh;
+    background: rgb(248, 177, 8);
+}
+
+.nav-link{
     display: flex;
-    justify-content: flex-end;
+    width: 50%;
+    height: 100%;
+    font-size: large;
+    justify-content: space-around;
     align-items: center;
-    padding: 2em;
+    margin-left: auto;
 }
-.header-border li a{
-    text-decoration: none;
-    color: white;
-    position: relative;
-    padding: 0 25px 0;
-    align-items: center;
-}
-.header-border li a:hover{
+
+.nav-link li a{
     color: black;
-    transition: .5s;
+    text-decoration: none;
+
 }
-.header-border li:first-child{
-    margin-right: auto;
-    margin-left: 3em;
-}
-.header-border ul li a:after{
-    content: '';
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%) scaleX(0);
-    -webkit-transform: translateX(-50%) scaleX(0);
-    transform-origin: 50% 50%;
-    width: 100%;
-    height: 2px;
-    background-color: #282c34;
-    -webkit-transition: transform .5s;
-    transition: transform .5s;
-}
-.header-border ul li a:hover:after{
-    -webkit-transform: translateX(-50%) scaleX(1);
-    transform: translateX(-50%) scaleX(1);
-}
+
 .logOut-btn{
     display: block;
     margin-left: auto;
@@ -60,3 +41,67 @@
 .logout-btn-wrapper{
     padding-left: 10px;
 }
+
+@media screen and (max-width: 800px ){
+    .line{
+        width: 30px;
+        height: 3px;
+        background: black;
+        margin: 5px;
+
+    }
+    nav{
+        position: relative;
+
+    }
+    .header-wrapper{
+        position: absolute;
+        cursor: pointer;
+        right: 5%;
+        top:50%;
+        transform: translate(-5%, -50%);
+        z-index: 4;
+    }
+
+    .nav-link {
+        position: fixed;
+        background: rgb(248, 177, 8);
+        height: 100vh;
+        width: 100%;
+        z-index: 3;
+        flex-direction: column;
+        clip-path: circle(0px at 90% -20%);
+        -webkit-clip-path:circle(100px at 90% -20%);
+        transition: all 1s ease-out;
+        pointer-events: none;
+    }
+    .nav-link.open{
+        clip-path: circle(2000px at 90% -10%);
+        -webkit-clip-path:circle(2000px at 90% -10%);
+        pointer-events: all;
+    }
+
+    .nav-link li{
+        opacity: 0;
+    }
+    .nav-link li a{
+        font-size: 25px;
+    }
+    .nav-link li:nth-child(1){
+        transition: all 0.5s ease 0.2s;
+    }
+    .nav-link li:nth-child(2){
+        transition: all 0.5s ease 0.4s;
+    }
+    .nav-link li:nth-child(3){
+        transition: all 0.5s ease 0.6s;
+    }
+    .nav-link li:nth-child(4){
+        transition: all 0.5s ease 0.8s;
+    }
+
+    li.fade{
+        opacity: 1;
+    }
+}
+
