--- a/economy-web-app/src/Groups/GroupsPage.css
+++ b/economy-web-app/src/Groups/GroupsPage.css
@@ -33,3 +33,191 @@
 .currentGroupName{
     background-color: white;
 }
+
+.groupOptions-wrapper{
+    text-align: center;
+}
+
+.groupPage-wrapper{
+    height: 100%;
+}
+.showGroupName-btn{
+    background: rgb(243, 243, 243);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 2px 4px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.showGroupInput-btn{
+    background: rgb(243, 243, 243);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 2px 4px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/**
+Join grouppage css
+ */
+
+
+
+
+
+
+
+
+.form{
+    position: relative;
+    width: 100%;
+    max-width: 380px;
+    padding: 60px 40px 40px;
+    background: rgba(0,0,0,0.7);
+    border-radius: 10px;
+    color: #fff;
+    box-shadow: 0 15px 25px rgba(0,0,0,0.5);
+}
+
+.form::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: rgba(255,255,255,0.08);
+    transform: skewX(-28deg);
+    transform-origin: bottom right;
+    border-radius: 10px;
+    pointer-events: none;
+}
+.form h2{
+    text-align: center;
+    letter-spacing: 1px;
+    margin-bottom: 2rem;
+    color: rgb(248, 177, 8);
+}
+.form .input-group{
+    position: relative;
+}
+.form .input-group input{
+    width: 100%;
+    padding: 10px 0;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid #fff;
+    outline: none;
+    background-color: transparent;
+    color: inherit;
+}
+.form .input-group label{
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 0;
+    font-size: 1rem;
+    pointer-events: none;
+    transition: .3s ease-out;
+}
+.form .input-group input:focus + label,
+.form .input-group input:valid + label{
+    transform: translateY(-18px);
+    color: rgb(248, 177, 8);
+    font-size: .8rem;
+
+}
+.submit-btn{
+    display: block;
+    margin-left: auto;
+    border: none;
+    outline: none;
+    background: rgb(248, 177, 8);
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.forgot-pw{
+    color: inherit;
+}
+
+#joinGroup-screen{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: -210px;
+    left: 0;
+    right: 0;
+    height: 0;
+    z-index: 1;
+    background: rgb(248, 177, 8);
+    opacity: 0;
+    transition: 0.6s;
+}
+#joinGroup-screen:target{
+    top: 0;
+    height: 110%;
+    opacity: 1;
+}
+.close{
+    position: absolute;
+    right: 1.5rem;
+    top: 0.5rem;
+    font-size: 2rem;
+    font-weight: 900;
+    text-decoration: none;
+    color: inherit;
+}
+#createGroup-screen{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: -210px;
+    left: 0;
+    right: 0;
+    height: 0;
+    z-index: 1;
+    background: rgb(248, 177, 8);
+    opacity: 0;
+    transition: 0.6s;
+}
+#createGroup-screen:target{
+    top: 0;
+    height: 110%;
+    opacity: 1;
+}
+@media screen and (max-width: 800px ){
+    #joinGroup-screen:target{
+        height: 150%;
+        min-height:100vh;
+        display: block;
+        z-index: 4;
+        padding-top: 30%;
+
+    }
+    #createGroup-screen:target{
+        height: 150%;
+        min-height:100vh;
+        display: block;
+        z-index: 4;
+        padding-top: 30%;
+
+    }
+
+
+}
+@media screen and (max-width: 600px ){
+    #groupTableHeader{
+        padding: 12px 15px;
+        font-size: 0.8em;
+
+    }
+}
