--- a/economy-web-app/src/MonthPage/ChartsPage.css
+++ b/economy-web-app/src/MonthPage/ChartsPage.css
@@ -5,6 +5,7 @@
 }
 .chart-container{
     display: flex;
+    box-shadow: 0 15px 25px rgba(0,0,0,0.5);
 }
 .chart-container > div{
     flex-basis: 50%;
@@ -29,11 +30,31 @@
 .pieChart-container{
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: white;
-    margin-right: 10px;
+
+
+    background: rgba(0,0,0,0.7);
+
 }
 
-.HomePage .Money-container{
+.HomePage .Money-container {
+    background: rgba(0,0,0,0.7);
 
-    background-color: white;
+
+}
+
+.chart-container div{
+    color: white;
+}
+
+@media screen and (max-width: 800px ){
+    .HomePage{
+        min-height:100%;
+    }
+    .chart-container{
+        display: table;
+        width:100%;
+
+    }
+
+
 }
